# EDA-Report-Generator

./: .gitignore  README.md  pyproject.toml
scripts/: run_wine_quality.ps1
src/eda_report/: __init__.py  __main__.py  analyze.py  charts.py  io.py  report.py  web.py
src/eda_report/static/: styles.css
src/eda_report/templates/: index.html  report.html
