[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-report"
version = "0.1.0"
description = "Lightweight EDA report generator for CSV datasets"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Workspace User" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "Flask>=3.0",
  "Markdown>=3.6",
]

[project.scripts]
eda-report = "eda_report.__main__:main"
eda-web = "eda_report.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eda_report = ["templates/*.html", "static/*.css"]
